--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "debug": "^4.1.1",
     "ejs": "^2.6.1",
     "express": "^4.17.0",
+    "helmet": "^3.18.0",
     "http-errors": "^1.7.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "rotating-file-stream": "^1.4.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.1"
   }
 }
