--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "ejs": "^2.6.1",
-    "express": "^4.17.0",
+    "express": "^4.17.1",
     "helmet": "^3.18.0",
     "http-errors": "^1.7.2",
     "morgan": "^1.9.1",
-    "rotating-file-stream": "^1.4.1"
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.9.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
