--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "^4.1.1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "helmet": "^3.18.0",
     "http-errors": "^1.7.3",
     "morgan": "^1.9.1",
