--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "start": "cross-env NODE_ENV=development DEBUG=nodejs-express-base:* nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "cross-env NODE_ENV=development DEBUG=* nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "^1.4.4",
