--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node ./bin/www",
-    "dev": "cross-env NODE_ENV=development DEBUG=* nodemon ./bin/www"
+    "dev": "cross-env NODE_ENV=development nodemon ./bin/www",
+    "dev:debug": "cross-env NODE_ENV=development DEBUG=* nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
