--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node ./bin/www",
-    "dev": "cross-env NODE_ENV=development nodemon ./bin/www",
-    "dev:debug": "cross-env NODE_ENV=development DEBUG=* nodemon ./bin/www",
+    "dev": "cross-env PLATFORM=development nodemon ./bin/www | pino-pretty",
+    "dev:debug": "cross-env PLATFORM=development DEBUG=* nodemon ./bin/www | pino-pretty",
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "axios": "^0.21.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "debug": "^4.3.2",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
@@ -23,10 +25,10 @@
     "pino-http": "^5.8.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "jest": "^27.2.2",
     "nock": "^13.1.3",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "pino-pretty": "^7.0.1"
   }
 }
