--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint .",
-    "start": "node ./server/index.js",
-    "dev": "cross-env PLATFORM=development nodemon ./server/index.js | pino-pretty",
-    "dev:debug": "cross-env PLATFORM=development DEBUG=* nodemon --inspect-brk ./server/index.js | pino-pretty",
+    "lint": "eslint ./server/ --ext .js,.jsx,.ts,.tsx",
+    "start": "node ./dist/index.js",
+    "compile": "tsc",
+    "dev": "cross-env PLATFORM=development nodemon ./server/index.ts | pino-pretty",
+    "dev:debug": "cross-env PLATFORM=development DEBUG=* nodemon --exec \"node -r ts-node/register --inspect-brk\" server/index.ts | pino-pretty",
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
@@ -25,10 +26,21 @@
     "pino-http": "^6.6.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.13",
+    "@types/express-ejs-layouts": "^2.5.0",
+    "@types/http-errors": "^1.8.2",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^27.5.1",
-    "nock": "^13.2.4",
     "nodemon": "^2.0.15",
-    "pino-pretty": "^7.6.0"
+    "pino-pretty": "^7.6.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
