--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint ./server/ --ext .js,.jsx,.ts,.tsx",
     "start": "node ./dist/index.js",
-    "compile": "tsc",
+    "compile": "rimraf ./dist && tsc && copyfiles -u 1 ./server/views/* ./dist/",
     "dev": "cross-env PLATFORM=development nodemon ./server/index.ts | pino-pretty",
     "dev:debug": "cross-env PLATFORM=development DEBUG=* nodemon --exec \"node -r ts-node/register --inspect-brk\" server/index.ts | pino-pretty",
     "test": "jest --passWithNoTests"
@@ -34,6 +34,7 @@
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^27.5.1",
