--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-starter",
   "version": "1.0.0",
-  "private": true,
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint ./server/ --ext .js,.jsx,.ts,.tsx",
     "start": "node ./dist/index.js",
