--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint ./server/ --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./server/",
     "start": "node ./dist/index.js",
     "compile": "rimraf ./dist && tsc && copyfiles -u 1 ./server/views/* ./dist/",
     "dev": "cross-env PLATFORM=development nodemon ./server/index.ts | pino-pretty",
@@ -26,20 +26,22 @@
     "pino-http": "^6.6.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-ejs-layouts": "^2.5.0",
     "@types/http-errors": "^1.8.2",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@types/node": "^17.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.12.0",
+    "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
-    "pino-pretty": "^7.6.0",
+    "pino-pretty": "^7.6.1",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
