--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./server/",
+    "lint": "eslint ./server/",
     "start": "node ./dist/index.js",
     "build": "rimraf ./dist && tsc && copyfiles -u 1 ./server/views/* ./dist/",
     "dev": "cross-env PLATFORM=development nodemon ./server/index.ts | pino-pretty",
@@ -11,39 +11,38 @@
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "debug": "^4.3.4",
+    "debug": "^4.3.7",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.9",
-    "express": "^4.19.2",
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
     "express-ejs-layouts": "^2.5.1",
     "helmet": "^8.0.0",
     "http-errors": "^2.0.0",
-    "pino": "^9.2.0",
-    "pino-http": "^10.2.0"
+    "pino": "^9.4.0",
+    "pino-http": "^10.3.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/http-errors": "^2.0.4",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.4",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
-    "pino-pretty": "^11.0.0",
-    "prettier": "^3.2.5",
+    "nodemon": "^3.1.7",
+    "pino-pretty": "^11.2.2",
+    "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
