--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint ./server/",
-    "start": "node ./dist/index.js",
-    "build": "rimraf ./dist && tsc && copyfiles -u 1 ./server/views/* ./dist/",
     "dev": "cross-env PLATFORM=development nodemon ./server/index.ts | pino-pretty",
     "dev:debug": "cross-env PLATFORM=development DEBUG=* nodemon --exec \"node -r ts-node/register --inspect-brk\" server/index.ts | pino-pretty",
-    "test": "jest --passWithNoTests"
+    "start": "cross-env NODE_ENV=production PLATFORM=production node --enable-source-maps ./dist/index.js",
+    "build": "node -e \"require('fs').rmSync('dist', {recursive:true, force:true})\" && tsc && node -e \"require('fs').cpSync('server/views', 'dist/views', {recursive: true})\"",
+    "test": "jest --passWithNoTests",
+    "lint": "eslint ./server/",
+    "format": "prettier --write server/",
+    "format:check": "prettier --check server/"
   },
   "dependencies": {
     "axios": "^1.13.4",
@@ -38,7 +40,6 @@
     "nodemon": "^3.1.11",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.8.1",
-    "rimraf": "^6.1.2",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
